--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist/public"
   },
+  "homepage": "https://christiandeomanlangit.github.io/Markdown-Interpreter",
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -57,6 +60,7 @@
     "express-session": "^1.18.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.13.1",
+    "gh-pages": "^6.3.0",
     "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
