--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rest-express",
+  "homepage": "https://christiandeomanlangit.github.io/Markdown-Interpreter",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -10,9 +11,9 @@
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist/public"
+    "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://christiandeomanlangit.github.io/Markdown-Interpreter",
+  
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
